--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,47 @@
-body {
-	font-family: sans-serif;
-	padding: 1em 3em;
+.phone-container {
+  border: solid 1px;
+  border-radius: 25px;
+  width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+button {
+  padding: 20px;
+  background-color: rgb(83, 198, 255);
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+button:active {
+  opacity: 0.5;
+}
+
+.phone-container p {
+  text-align: start;
+  margin-left: 40px;
+}
+
+.page-changes {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  position: absolute;
+  top: 50%;
+  gap: 20px;
+}
+
+.big-button {
+  width: 400px;
+  height: 200px;
+  position: absolute;
+  top: 75%;
+}
+
+.image {
+  height: 305px;
+}
+
+.hidden {
+  display: none;
 }
